Setup Firebase credentials with environment variables

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "tailwindcss": "^3.4.17"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "firebase": "^11.1.0",
     "firebase-admin": "^13.0.2"
   }
