Setup Firebase credentials with environment variables

--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
     "dotenv": "^16.4.7",
     "firebase": "^11.1.0",
     "firebase-admin": "^13.0.2"
+  },
+  "scripts": {
+    "start": "node server.js",  
+    "dev": "next dev"          
   }
 }
