--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "express": "^4.17.3"
   },
   "dependencies": {
     "dotenv": "^16.4.7",
@@ -10,7 +11,8 @@
     "firebase-admin": "^13.0.2"
   },
   "scripts": {
-    "start": "node server.js",  
-    "dev": "next dev"          
-  }
+  "start": "node server.js",  
+  "dev": "node server.js"    
+}
+
 }
